# activecut

./: README.md  chris_comments.txt  diff.tex  journaldraft.tex  readme.txt  reviewer_suggestions.txt
.svn/: wc.db
GenToy/: CMakeCache.txt  CMakeLists.txt  all.h  test1.cxx
GrabCut/: Color.cpp  Color.h  GMM.h  GrabCut.cpp  GrabCut.h  Image.cpp  Image.h  main.cpp
OHBM2012/: myreport.tex
actlearn/code/core/: CMakeLists.txt  cmake_install.cmake  grabcutseg.cxx  imagetype.cxx  loadfiles.cxx  loadfiles.h  pca.cxx  tmp.txt  utility.cxx
all_python_scripts/: alignlabels.py  avgrain.py  avgrainbtwsub.py  batch_process.py  bs_run.py  bs_run_groupmrf.py  bs_run_kmeans.py  bs_run_ncuts.py  bs_run_uv.py  compvar.py  crop_all_pdfs.py  crop_all_pngs.py  drawcolorbar.py  eigenimage.py  filter_genes.py  gentestlabels.py  getavg012map.py  inter_session_RI.py  misctools.py  roi.py  sample2label.py  show_comp_map.py  sklearn_pca_example.py  testalpha.py
autism/: features.txt
autism/code/: CMakeLists.txt  common.h  parcelize.cxx  printhd.cxx
bib/: centralref.bib  vessel.bib
confield/trunk/C/: .kdbgrc.confield  .kdbgrc.marrayc  CMakeCache.txt  CMakeLists.txt  EMPost.cxx  ExtractRealData.cxx  GPUAnnealing.cu  GPUCorr.cu  GPUDetrend.cu  GPUEst.cu  GPUInit.cu  GPUSampling.cu  cmake_install.cmake  common.h  cppheader.h  graymatter.cxx  main.cxx  parameters.inp  tools.cxx
crf/: CMakeLists.txt  common.h  crfmain.cxx  utility.cxx  utility.h
docs/: 2013-09-22-Note-21-43.xoj
genes/: readme.txt
genes/code_Liu/: CMakeLists.txt  canoncorr_orig.m  common.h  dualcca.m  dualcca_wrapper.m  get_cov.m  geteigenimage.cxx  ispd.m  make_probe_gene_relmat.m  methods.py  mycanoncorr.m  mycanoncorr_clean.m  mycanoncorr_dirty.m  mycca.R  mycca.m  mycorr.m  mykcca.m  prep.py  remove_pc.m
genes/code_Liu/bak_file/: mycanoncorr_dirty.m  mycanoncorr_dirty.m.bak
gglasso/: CMakeCache.txt  CMakeLists.txt  alllambda.txt  beta.txt  betah.txt  codescent.cxx  common.h  drawbeta.R  drawnikhil.R  gglasso.cxx  mylambda.txt  paramfile2.txt  procedure.sh  samples.txt  testlasso.cxx  x.txt  x2.txt  xx.txt  y.txt  y2.txt  yy.txt
graphcuts/: CMakeCache.txt  CMakeLists.txt  GCoptimization.h  common.h  compenergy.cxx  generateimage.cxx  recoverimage.cxx  testeigen.cxx  util.cxx
graphcuts/doc/: graphcuts.tex
grf/: grf.tex
group_mrf/: .Rhistory  .nfs000000001aeaf06600000050  CMakeLists.txt  MCModel.cxx  MCModel_init.cxx  MCModel_llhood.cxx  alignlabels.cxx  common.h  commonalt.h  createfmri2.cxx  createimage.cxx  estimatemu.cxx  genmeants.cxx  gensubmap.cxx  initmrf.cxx  mcem.cfg  meants.txt  mypreproc.py.bak  mypreproc.sh  procedure.sh  projectfmri.cxx  regfilter.cxx  regmotion.cxx  segimagealt.cxx  segimagealt_bak.cxx  subkmeans.cxx  svn-commit.2.tmp  svn-commit.tmp  tmp.cxx  todo.txt  utilalt.cxx  utilalt.h  vectorimagetest.cxx  vmf_test.R  vmmseg.cxx  xtrctmeants.cxx
group_mrf/group_mrf_lemon/: CMakeCache.txt  CMakeLists.txt  alignlabelmaps.cxx  applymask.cxx  applymask2.cxx  common.h  compareclusterings.cxx  compute_snr.cxx  copyheader.cxx  core  fliplabels.cxx  fmriresample.cxx  genrandom.cxx  gentestlabel.cxx  gentestlabel2.cxx  gentestlabel_base.cxx  get012.cxx  geticc.cxx  geticcs.cxx  groupmrfmain.cxx  groupmrfmain.cxx.new  iccsim.m  icctest.m  ind2label.cxx  label2ind.cxx  labelmapsim.cxx  labelmapsim_random.cxx  labmapsim_real.cxx  margll.cxx  poormanprofiler.sh  sample2label.cxx  seedcorr.cxx  todo.txt  utility.cxx  utility.h
group_mrf/group_mrf_lemon/forsnapshot/: groupmrfmain.cxx  utility.cxx  utility.h
group_mrf/group_mrf_lemon/misc/: testlimits  testlimits.cxx
group_mrf/group_mrf_lemon/testscripts/: runningtest.sh  test1b.sh  test1c.sh  test1d.sh  test1e.sh  test1f.sh  test2b.sh  test2f.sh  test2f1.sh  test3b.sh  test3d.sh  test3e.sh  test3e1.sh  test3f.sh  test3g.sh  test4b.sh  test4d.sh  test4f.sh  test5b.sh  testmcem1.sh  testmcem2.sh  testmcem3.sh  testmcem4.sh
groupising/: CMakeLists.txt  common_gmmodel.h  common_mcem.h  createimage.cxx  createmask.cxx  deltachange.txt  genest.cxx  genobsimage.cxx  gensubmap.cxx  gmmodel.cxx  gmmodel.h  gmmodel_graph.cxx  gmmodel_graph.h  gmmodel_mcem.cxx  gmmodel_mcem.h  gmmseg.cxx  initmrf.cxx  kmeans.cxx  mcemgmm.cxx  parest.cxx  segimagealt.cxx  util.cxx  validatelabelmap.cxx
groupising/gco/: Makefile  cmake_install.cmake
groupising/gco/.svn/: all-wcprops  entries
groupising/gco/.svn/text-base/: CMakeLists.txt.svn-base  GCoptimization.h.svn-base
groupising/undigraph/: CMakeLists.txt  gentwolayers.cxx
hdmrf/: CMakeCache.txt  CMakeLists.txt  common.h  hdmrf.cxx  todo.txt  utility.cxx  utility.h
hiermrf/: common.h  hello_lemon.cxx  hier_procedure.sh  hiermrf.cxx  mlebeta.cxx  singlemrf.cxx  swsim.cxx  utility.cxx  utility.h
journaldraft/: coverletter.txt  digest.txt  haldefs.sty  highlights.txt  myreference.bib  revison1.tex
lasso/: GGMselectEnetG0.R  GGMselectG0.R  GGMselectOR.R  ModLassoEnetG0.R  ModLassoG0.R  ModLassoOR.R  MyFamilyG0.R  PourLancer.R  RunPubli.R  RunPubliMFCA.R  RunPubliPop.R  RunPublibis.R  post.R  (+22 more)
mcem/: CMakeCache.txt  CMakeLists.txt  MCModel.cxx  MCModel.h  analyzeLog.m  analyzeLog.r  backtrack.m  common.h  commonalt.h  createimage.cxx  createpotts.cxx  descent.m  graphcuts.cfg  segimage.cxx  segimagealt.cxx  segimagegc.cxx  todo.txt  util.cxx  utilalt.cxx
mcem/docs/: hiermrf.tex  mcem.tex
mcem_fmri/: CMakeCache.txt  CMakeLists.txt  MCModel.cxx  MCModel.h  applymask.cxx  commonalt.h  createfmri.cxx  createmask.cxx  descent.cxx  getsum.cxx  getvar.cxx  mlebeta.cxx  parfile.txt  projectfmri.cxx  projecttoy.cxx  readme.txt  segimagealt.cxx  threshlabel.cxx  todo.txt  utilalt.cxx  verify.cxx  vonmise.cxx  zshiftica.cxx
mcem_fmri/docs/: mcem.tex  ref.bib
mcem_fmri/docs/figures/.svn/: all-wcprops  entries
mcem_fmri/docs/figures/.svn/text-base/: labeled1.png.svn-base  labeled3.png.svn-base  obs1.png.svn-base  obs3.png.svn-base  true3.png.svn-base
util/: CMakeCache.txt  CMakeLists.txt  common.h  compute_hist.cxx  label_contour_filter.cxx  overlay.cxx  overlayheat.cxx  rain.cxx  subkemans.cxx  util.cxx  util.h
(+825 files in other folders)
